@@ -78,20 +78,20 @@ public:
         return (m_handle != 0);
     }
 
-    void *resolve(const char *symbol)
+    QFunctionPointer resolve(const char *symbol)
     {
         if (!m_didLoad)
             load();
         if (!m_handle)
             return 0;
 #ifdef Q_OS_WINCE
-    return (void*)GetProcAddress(m_handle, (const wchar_t*)QString::fromLatin1(symbol).utf16());
+        return QFunctionPointer(GetProcAddress(m_handle, (const wchar_t*)QString::fromLatin1(symbol).utf16()));
 #else
-    return (void*)GetProcAddress(m_handle, symbol);
+        return QFunctionPointer(GetProcAddress(m_handle, symbol));
 #endif
     }
 
-    static void *resolve(const QString &libraryName, const char *symbol)
+    static QFunctionPointer resolve(const QString &libraryName, const char *symbol)
     {
         return QSystemLibrary(libraryName).resolve(symbol);
     }
