@@ -297,7 +297,7 @@ void tst_QLibrary::unload_after_implicit_load()
 #endif
 
     QLibrary library( "./mylib" );
-    void *p = library.resolve("mylibversion");
+    QFunctionPointer p = library.resolve("mylibversion");
     QVERIFY(p); // Check if it was loaded
     QVERIFY(library.isLoaded());
     QVERIFY(library.unload());
